@@ -26,6 +26,7 @@ Version 1.5.11+svn:
    * Fixed bug #13029: Problem with mouse-over unit identification in replays
    * Added experimental campaign selection dialog (Only available when
      starting with --new-widgets.)
+   * Properly reset the scrollbar mode when resizing (bug #13018)  
  * WML Engine:
    * Fix incorrect or doubled "sighted" events when delaying shroud update
    * Fix sometimes doubled "select" events
